<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_task"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:background="@color/colorWhite"
    android:elevation="10dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_task_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/text_date"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_task_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:drawableStart="@drawable/ic_task"
            android:drawablePadding="5dp"
            android:text="@string/hint_task_title"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_task_remaining_days"
            app:layout_constraintStart_toEndOf="@id/tv_task_date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_task_remaining_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="5dp"
            android:text="@string/text_remaining_time"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tv_task_date"
            app:layout_constraintTop_toBottomOf="@id/tv_task_title" />

        <Switch
            android:id="@+id/switch_completion_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:switchPadding="10dp"
            android:text="@string/text_pending"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tv_task_date"
            app:layout_constraintTop_toBottomOf="@id/tv_task_remaining_days" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>